--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<input type="text" id="name" required>
+		<label for="name">Name</label>
+
+		<input type="email" id="email" required>
+		<label for="email">Email</label>
+
+		<input type="radio" name="gender" required >
+		<label>Male</label>
+		
+		<input type="radio" name="gender" required >
+		<label>Female</label>
+
+		<select name="cars" id="cars">
+			  <option value="volvo">BMW</option>
+			  <option value="saab">v</option>
+			  <option value="mercedes">Mercedez</option>
+		</select>
+		<label for="cars">Car Brands</label>
+
+		<input type="number" id="carage" required>
+		<label for="carage">Car Age</label>
+
+		<input type="date" id="dop" required>
+		<label for="dop">Date of Purchase(dop)</label>
+
+		<input type="password" id="password" required>
+		<label for="password">Password</label>
+
+		<button type="submit">Submit Button</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
